--- a/CS Interview coach/MainWindow.xaml
+++ b/CS Interview coach/MainWindow.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CS_Interview_coach"
         mc:Ignorable="d"
-        Title="C# Interview coach" MinHeight="437" Height="437" MinWidth="711" Width="711" Icon="Pictures/Icon.png">
+        Title="C# Interview coach" MinHeight="437" Height="437" MinWidth="711" Width="711" Icon="Pictures/Icon.png" KeyDown="Window_KeyDown">
+    
     <Grid Margin="0,1,0,-1">
         <Grid.RowDefinitions>
             <RowDefinition Height="5*"/>
@@ -30,7 +31,7 @@
         <Button Name="AddButton" Content="Add question" HorizontalAlignment="Right" Margin="0,10,11,0" VerticalAlignment="Top" Width="76" Height="22" Click="Button_Click_1"/>
         <Button Name="EditButton" Content="Edit" HorizontalAlignment="Right" Margin="0,37,11,0" VerticalAlignment="Top" Width="76" Click="Button_Click_3" Height="20"/>
         <CheckBox IsChecked="True"  Content="Answers" HorizontalAlignment="Right" Margin="0,63,12,0" Height="15" VerticalAlignment="Top" Width="71" Checked="CheckBox_Checked" Unchecked="CheckBox_Checked"/>
-        <Slider Value="16" ValueChanged="Slider_ValueChanged" Minimum="10" Maximum="30" Margin="0,0,11,32" Height="18" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="77" Grid.Row="1"/>
+        <Slider Name="SizeSlider" Value="16" ValueChanged="Slider_ValueChanged" Minimum="10" Maximum="30" Margin="0,0,11,32" Height="18" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="77" Grid.Row="1"/>
         <Label Content="Font size" HorizontalAlignment="Right" Margin="0,0,21,8" RenderTransformOrigin="0.342,-0.346" Grid.Row="1" Height="26" VerticalAlignment="Bottom" Width="57"/>
     </Grid>
 </Window>
